add Device management

--- a/package.json
+++ b/package.json
@@ -25,16 +25,14 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-spinners": "^0.5.4",
-    "react-toastify": "^5.1.0"
+    "react-toastify": "^5.1.0",
+    "rimraf": "^2.6.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "rimraf ./build && react-app-rewired start",
     "build": "react-app-rewired build",
-    "postbuild": "npm run copy-to-wwwroot",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject",
-    "clean-server": "rimraf ../RMCoreApp/RMCoreApp.WebAPI/wwwroot",
-    "copy-to-wwwroot": "npm run clean-server && ncp ./build ../RMCoreApp/RMCoreApp.WebAPI/wwwroot"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,9 +50,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.11",
-    "ncp": "^2.0.0",
     "react-app-rewired": "^2.1.2",
-    "rimraf": "^2.6.3",
     "uuid": "^3.3.2"
   }
 }
