--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "marked": "^0.6.2",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
+    "mobx-utils": "^5.4.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.4.2",
