--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "start": "rimraf ./build && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postbuild": "rimraf build/**/*.map"
   },
   "eslintConfig": {
     "extends": "react-app"
