--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ag-grid-react": "^21.0.1",
     "antd": "^3.19.8",
     "axios": "^0.19.0",
+    "chart.js": "^2.8.0",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^8.0.0",
     "history": "^4.9.0",
@@ -20,6 +21,7 @@
     "prop-types": "^15.7.2",
     "query-string": "^6.8.1",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
@@ -39,12 +41,19 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not ie <= 11",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.2.14",
